fix z-index

--- a/src/styles/alert.scss
+++ b/src/styles/alert.scss
@@ -3,7 +3,7 @@
 .gmal-overlay {
   position: fixed;
   inset: 0;
-  z-index: $z-index - 1;
+  z-index: 0;
   background: vars('overlay-bg');
   animation-duration: .3s;
 }
@@ -13,7 +13,7 @@
   top: 45%;
   right: 0;
   left: 0;
-  z-index: $z-index;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
