--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -6,7 +6,7 @@
   top: 45%;
   right: 0;
   left: 0;
-  z-index: $z-index;
+  z-index: 2;
   width: max-content;
   margin: 0 auto;
   transform: translateY(-50%);
