--- a/src/styles/notice.scss
+++ b/src/styles/notice.scss
@@ -4,13 +4,13 @@
   position: fixed;
   right: 0;
   left: 0;
-  z-index: $z-index;
+  z-index: 2;
   background: vars('notice-bg');
   animation-duration: 0.3s;
 
   .gmal-notice-main {
     position: relative;
-    z-index: 2;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: normal;
